put the explanation video link in comments

--- a/tools.html
+++ b/tools.html
@@ -38,7 +38,7 @@
                         <div>
                             <h3>Basic Budget Tool</h3>
                             <p>The basic budgeting tool is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.
-                                <a href="">Explanation Video</a></p>
+                                <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="images/basic-budget-tool-ss.png" alt="Basic Budget Excel Finance Tool">
                     </div>
@@ -49,7 +49,7 @@
                     <div class="tools-content">
                         <div>
                             <h3>Retirement Planning Tool</h3>
-                            <p>The cost to retire “comfortably” is getting higher & higher. With this tool, monitor your progress towards financial stability. <a href="">Explanation Video</a></p>
+                            <p>The cost to retire “comfortably” is getting higher & higher. With this tool, monitor your progress towards financial stability. <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="" alt="">
                     </div>
@@ -60,7 +60,7 @@
                     <div class="tools-content">
                         <div>
                             <h3>Investment Management Tool</h3>
-                            <p>The “secret” to building wealth is save often and invest responsibly. Analyze how your investment strategies compares to your long term goals. <a href="">Explanation Video</a></p>
+                            <p>The “secret” to building wealth is save often and invest responsibly. Analyze how your investment strategies compares to your long term goals. <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="" alt="">
                     </div>
@@ -74,7 +74,7 @@
                     <div class="tools-content">
                         <div>
                             <h3>Advanced Budget Tool</h3>
-                            <p>This tool is for people who want in-depth analysis of their annual spending patterns. At just $50, this tool pays for itself when used correctly to point out spending patterns and to optimize the way we use our money. <a href="">Explanation Video</a></p>
+                            <p>This tool is for people who want in-depth analysis of their annual spending patterns. At just $50, this tool pays for itself when used correctly to point out spending patterns and to optimize the way we use our money. <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="images/advanced-budget-tool-ss.png" alt="Advanced Budget Excel Tool">
                     </div>
