85% done the list to change

--- a/tools.html
+++ b/tools.html
@@ -36,7 +36,7 @@
                 <div class="tools">
                     <div class="tools-content">
                         <div>
-                            <h3>Basic Budget Tool</h3>
+                            <h3><a href="individual-tools/basic-tools/basic-budget-tool.html">Basic Budget Tool</a></h3>
                             <p>The basic budgeting tool is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.
                                 <!--<a href="">Explanation Video</a></p>-->
                         </div>
@@ -48,7 +48,7 @@
                 <div class="tools">
                     <div class="tools-content">
                         <div>
-                            <h3>Retirement Planning Tool</h3>
+                            <h3><a href="individual-tools/basic-tools/basic-retirement-tool.html">Retirement Planning Tool</a></h3>
                             <p>The cost to retire “comfortably” is getting higher & higher. With this tool, monitor your progress towards financial stability. <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="" alt="">
@@ -56,10 +56,10 @@
                     <a href="individual-tools/basic-tools/basic-retirement-tool.html" class="download-button">Download</a>
                 </div>
 
-                <div class="tools">
+                <div class="tools" id="last-listed-tool">
                     <div class="tools-content">
                         <div>
-                            <h3>Investment Management Tool</h3>
+                            <h3><a href="individual-tools/basic-tools/basic-investment-tool .html">Investment Management Tool</a></h3>
                             <p>The “secret” to building wealth is save often and invest responsibly. Analyze how your investment strategies compares to your long term goals. <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="" alt="">
@@ -73,7 +73,7 @@
                 <div class="tools">
                     <div class="tools-content">
                         <div>
-                            <h3>Advanced Budget Tool</h3>
+                            <h3><a href="individual-tools/advanced-tools/advanced-budget-tool.html">Advanced Budget Tool</a></h3>
                             <p>This tool is for people who want in-depth analysis of their annual spending patterns. At just $50, this tool pays for itself when used correctly to point out spending patterns and to optimize the way we use our money. <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="images/advanced-budget-tool-ss.png" alt="Advanced Budget Excel Tool">
