--- a/index.html
+++ b/index.html
@@ -10,58 +10,58 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
         <!-- TradingView Widget BEGIN -->
-        <div class="tradingview-widget-container">
-            <div class="tradingview-widget-container__widget"></div>
-            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
-            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
-            {
-                "symbols": [
-                {
-                    "proName": "FOREXCOM:SPXUSD",
-                    "title": "S&P 500 Index"
-                },
-                {
-                    "proName": "FOREXCOM:NSXUSD",
-                    "title": "US 100 Cash CFD"
-                },
-                {
-                    "proName": "FX_IDC:EURUSD",
-                    "title": "EUR to USD"
-                },
-                {
-                    "proName": "BITSTAMP:BTCUSD",
-                    "title": "Bitcoin"
-                },
-                {
-                    "proName": "BITSTAMP:ETHUSD",
-                    "title": "Ethereum"
-                }
-                ],
-                "showSymbolLogo": true,
-                "isTransparent": false,
-                "displayMode": "adaptive",
-                "colorTheme": "dark",
-                "locale": "en"
-            }
-            </script>
-        </div>
-        <!-- TradingView Widget END -->
+<div class="tradingview-widget-container">
+    <div class="tradingview-widget-container__widget"></div>
+    <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
+    <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+    {
+    "symbols": [
+      {
+        "proName": "FOREXCOM:SPXUSD",
+        "title": "S&P 500 Index"
+      },
+      {
+        "proName": "FOREXCOM:NSXUSD",
+        "title": "US 100 Cash CFD"
+      },
+      {
+        "proName": "FX_IDC:EURUSD",
+        "title": "EUR to USD"
+      },
+      {
+        "proName": "BITSTAMP:BTCUSD",
+        "title": "Bitcoin"
+      },
+      {
+        "proName": "BITSTAMP:ETHUSD",
+        "title": "Ethereum"
+      }
+    ],
+    "showSymbolLogo": true,
+    "isTransparent": true,
+    "displayMode": "adaptive",
+    "colorTheme": "dark",
+    "locale": "en"
+  }
+    </script>
+  </div>
+  <!-- TradingView Widget END -->
     </head>
 
     <body>
         <header>
-            <a href="index.html"><p>MoneyMatters.</p></a>
             <img src="images/money_mattershandshake-cropped.png" alt="Handshake cartoon">
             <h1>MoneyMatters.</h1>
-            <nav class="top">
-                <div class="box">
-                    <a href="index.html">Home</a>
-                    <a href="tools.html">Tools</a>
-                    <a href="aboutus.html">About Us</a>
-                    <a href="" class="blog-link">Blogs</a>
-                </div>
-                <a href="#join-us" class="block-link">Get Connected!</a>
-            </nav>
+
+            <div class="top-bar"></div>
+                <a href="index.html"><p>MoneyMatters.</p></a>
+                <nav class="top">
+                        <a href="index.html">Home</a>
+                        <a href="tools.html">Tools</a>
+                        <a href="aboutus.html">About Us</a>
+                        <a href="" class="blog-link">Blogs</a>
+                    <a href="#join-us" class="block-link">Get Connected!</a>
+                </nav>
         </header>
 
         <main>
