completed all revised nav bars

--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,7 @@
 
     <body>
         <header>
+            <div class="top-bar"></div>
             <a href="index.html"><p>MoneyMatters.</p></a>
             <nav class="top">
                 <a href="index.html">Home</a>
