--- a/tools.html
+++ b/tools.html
@@ -14,6 +14,7 @@
 
     <body>
         <header>
+            <div class="top-bar"></div>
             <a href="index.html"><p>MoneyMatters.</p></a>
             <nav class="top">
                 <a href="index.html">Home</a>
