working on second version of index page

--- a/index-test1.html
+++ b/index-test1.html
@@ -49,6 +49,9 @@
 
     <body>
         <header>
+            <img src="images/money_mattershandshake-cropped.png" alt="Handshake cartoon">
+            <h1>MoneyMatters.</h1>
+
             <div class="top-bar"></div>
                 <a href="index.html"><p>MoneyMatters.</p></a>
                 <nav class="top">
@@ -61,19 +64,11 @@
         </header>
 
         <main>
-            <div class="hero">
-                <div class="hero-text">
-                    <h1>MoneyMatters.</h1>
-                    <p class="onep1">Learn how to use your money effectively.</p>
-                    <p class="onep2">This site was started by two college friends who believe access to powerful financial tools should be FREE and easy to use for EVERYONE.</p>
-                    <a href="aboutus.html">Start Here</a>
-                    <img src="images/money_matters-tree.png" alt="Light green money tree" class="back-text-img">
-                </div>
-                <img src="images/moneymatters-logo.png" alt="Handshake cartoon">
-            </div>
             <section class="section1">
-            
-                <!--<p class="twop">Download our simple tools & learn more about your finances along with strategies to improve them. 15 minutes, a lifetime of value.</p>-->
+                <img src="images/money_matters-tree.png" alt="Light green money tree">
+                <p class="onep1">Learn how to use your money effectively.</p>
+                <a href="aboutus.html">Start Here!</a>
+                <p class="onep2">This site was started by two college friends who believe access to powerful financial tools should be FREE and easy to use for EVERYONE. <br> <br> Download our simple tools & learn more about your finances along with strategies to improve them. 15 minutes, a lifetime of value.</p>
             </section>
 
             <section class="section2">
@@ -82,23 +77,23 @@
                     <div>
                         <a href="individual-tools/basic-tools/basic-budget-tool.html">
                         <img src="images/budgeticon.png" alt="Budgeting">
-                        <h3>Basic Budgeting</h3>
+                        <h3>Basic Budget Tool</h3>
                         <p>Do you know how you spend your money?</p>
                         </a>
                     </div>
 
                     <div>
                         <a href="individual-tools/basic-tools/basic-retirement-tool.html">
-                        <img src="images/retirement-img.png" alt="Retirement">
-                        <h3>Retirement Planning</h3>
+                        <img src="images/retirementicon.png" alt="Retirement">
+                        <h3>Retirement Planning Tool</h3>
                         <p>Are you on track to retire comfortably?</p>
                         </a>
                     </div>
 
                     <div>
                         <a href="individual-tools/basic-tools/basic-investment-tool .html">
-                        <img src="images/investment-img.png" alt="Investing">
-                        <h3>Investment Management</h3>
+                        <img src="images/investmenticon.png" alt="Investing">
+                        <h3>Investment Management Tool</h3>
                         <p>Do your investment strategies match your goals?</p>
                         </a>
                     </div>
@@ -134,8 +129,6 @@
 
             <section class="section4" id="join-us">
                 <h2>Get Connected</h2>
-                <h3>Enter Your Email</h3>
-                <p>Please submit the google form to receive other valuable insights.</p>
                 <div class="connection-container">
                     <div>
                         <a href="">
@@ -145,21 +138,12 @@
                         </a>
                     </div>
 
-                    <div class="form-container">
-                        <form>
-                            <div class="row">
-                              <div class="col">
-                                <input type="text" class="form-control" placeholder="First name">
-                              </div>
-                              <div class="col">
-                                <input type="text" class="form-control" placeholder="Last name">
-                              </div>
-                            </div>
-                            <div class="row" id="email">
-                                <input type="text" class="form-control" placeholder="Email">
-                            </div>
-                            <button type="submit" class="submit-btn">Submit</button>
-                          </form>
+                    <div>
+                        <a href="">
+                            <img src="" alt="">
+                            <h3>Enter Your Email</h3>
+                            <p>Please submit the google form to receive other valuable insights.</p>
+                        </a>
                     </div>
                 </div>
             </section>
