--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <a href="aboutus.html">Start Here</a>
                     <img src="images/money_matters-tree.png" alt="Light green money tree" class="back-text-img">
                 </div>
-                <img src="images/moneymatters-logo.png" alt="Handshake cartoon">
+                <img src="images/hero-icon.png" alt="Monney Matters Logo">
             </div>
             <section class="section1">
             
@@ -81,7 +81,7 @@
                 <div class="tools-container">
                     <div>
                         <a href="individual-tools/basic-tools/basic-budget-tool.html">
-                        <img src="images/budgeticon.png" alt="Budgeting">
+                        <img src="images/budget-img.png" alt="Budgeting">
                         <h3>Basic Budgeting</h3>
                         <p>Do you know how you spend your money?</p>
                         </a>
