inputted budget tools laptop images

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div>
                         <a href="individual-tools/basic-tools/basic-budget-tool.html">
                         <img src="images/budget-img.png" alt="Budgeting">
-                        <h3>Basic Budgeting</h3>
+                        <h3>Basic Budget Tool</h3>
                         <p>Do you know how you spend your money?</p>
                         </a>
                     </div>
@@ -90,7 +90,7 @@
                     <div>
                         <a href="individual-tools/basic-tools/basic-retirement-tool.html">
                         <img src="images/retirement-img.png" alt="Retirement">
-                        <h3>Retirement Planning</h3>
+                        <h3>Retirement Planning Tool</h3>
                         <p>Are you on track to retire comfortably?</p>
                         </a>
                     </div>
@@ -98,7 +98,7 @@
                     <div>
                         <a href="individual-tools/basic-tools/basic-investment-tool .html">
                         <img src="images/investment-img.png" alt="Investing">
-                        <h3>Investment Management</h3>
+                        <h3>Investment Management Tool</h3>
                         <p>Do your investment strategies match your goals?</p>
                         </a>
                     </div>
