--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     </div>
 
                     <div class="form-container">
-                        <form id="signup-form">
+                        <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
                             <div class="row">
                               <div class="col">
                                 <input type="text" name="first_name" class="form-control" placeholder="First name">
@@ -160,7 +160,6 @@
                             </div>
                             <button type="submit" class="submit-btn">Submit</button>
                           </form>
-                          <p id="form-status"></p>
                     </div>
                 </div>
             </section>
