--- a/tools.html
+++ b/tools.html
@@ -38,7 +38,7 @@
                     <div class="tools-content">
                         <div>
                             <h3><a href="individual-tools/basic-tools/basic-budget-tool.html">Basic Budget Tool</a></h3>
-                            <p>The basic budgeting tool is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.
+                            <p>The basic budgeting tool is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.</p>
                                 <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="images/basic-budget-laptop.png" alt="Basic Budget Excel Finance Tool">
@@ -50,7 +50,7 @@
                     <div class="tools-content">
                         <div>
                             <h3><a href="individual-tools/basic-tools/basic-retirement-tool.html">Retirement Planning Tool</a></h3>
-                            <p>The cost to retire “comfortably” is getting higher & higher. With this tool, monitor your progress towards financial stability. <!--<a href="">Explanation Video</a></p>-->
+                            <p>The cost to retire “comfortably” is getting higher & higher. With this tool, monitor your progress towards financial stability.</p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="" alt="">
                     </div>
@@ -61,9 +61,9 @@
                     <div class="tools-content">
                         <div>
                             <h3><a href="individual-tools/basic-tools/basic-investment-tool .html">Investment Management Tool</a></h3>
-                            <p>The “secret” to building wealth is save often and invest responsibly. Analyze how your investment strategies compares to your long term goals. <!--<a href="">Explanation Video</a></p>-->
+                            <p>The “secret” to building wealth is save often and invest responsibly. Analyze how your investment strategies compares to your long term goals.</p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
-                        <img src="" alt="">
+                        <img src="images/basic-investment-laptop.png" alt="Basic Investment Management Tool">
                     </div>
                     <a href="individual-tools/basic-tools/basic-investment-tool .html" class="download-button">Download</a>
                 </div>
@@ -75,9 +75,20 @@
                     <div class="tools-content">
                         <div>
                             <h3><a href="individual-tools/advanced-tools/advanced-budget-tool.html">Advanced Budget Tool</a></h3>
-                            <p>This tool is for people who want in-depth analysis of their annual spending patterns. At just $50, this tool pays for itself when used correctly to point out spending patterns and to optimize the way we use our money. <!--<a href="">Explanation Video</a></p>-->
+                            <p>This tool is for people who want in-depth analysis of their annual spending patterns. At just $50, this tool pays for itself when used correctly to point out spending patterns and to optimize the way we use our money.</p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="images/advanced-budget-laptop.png" alt="Advanced Budget Excel Tool">
+                    </div>
+                    <a href="individual-tools/advanced-tools/advanced-budget-tool.html" class="download-button">Download</a>
+                </div>
+
+                <div class="tools">
+                    <div class="tools-content">
+                        <div>
+                            <h3><a href="">Advanced Investment Mangagement Tool</a></h3>
+                            <p></p> <!--<a href="">Explanation Video</a></p>-->
+                        </div>
+                        <img src="images/advanced-investment-laptop.png" alt="Advanced Investment Management Tool">
                     </div>
                     <a href="individual-tools/advanced-tools/advanced-budget-tool.html" class="download-button">Download</a>
                 </div>
