--- a/individual-tools/advanced-tools/advanced-investment-tool.html
+++ b/individual-tools/advanced-tools/advanced-investment-tool.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>Advanced Budget Tool</title>
+        <title>Advanced Investment Management Tool</title>
         <meta charset="UTF-8">
-        <meta name="description" content="Advanced Budgeting Tool">
+        <meta name="description" content="Advanced Investment Management Tool">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../indiv-tools-scss/indiv-tool-styling.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,19 +23,19 @@
         </header>
         <main>
             <section class="section1">
-                <h1>Advanced Budget Tool.</h1>
+                <h1>Advanced Investment Management Tool.</h1>
                 <p class="first-p">The basic budgeting tool is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.</p>
                 
                 <div class="dropdown-details" id="dropdownContent">
                     <p>
-                        The Advanced Budget Tool helps to record, visualize, and make recommendations based on spending patterns.
+                        The Advanced Investment Management Tool helps to categorize, project, and optimize your investments and curate an investment strategy that works for your goals.
 
                         <ul>
-                            <li>Adjust the black cells with white font to record your information (This is personal to you only and MoneyMatters does not have access until you share it with us)</li>
+                            <li>Adjust the black cells with white font to record your information. Adjust the Risk Tolerance Cell (1,2,3). 1 being the least risky recommended for generally older individuals (55+) who rely on capital preservation and liquidity to live on. 2 is moderate risk for those looking to steadily grow while preserving capital through increased equity exposure. 3 is the greatest risk allocation of the options in this tool designed for young people with time to make gains and generally less capital at risk. (This is personal to you only and MoneyMatters does not have access until you share it with us)</li>
 
-                            <li>Notice the monthly trend bar charts relating to each expense. Do certain expenses spike during different times of the year? How can your average monthly spending help you project spending for next year?</li>
+                            <li>On the “Recommendations” tab, adjust the black cells with white font to input the security of your choosing from the recommended list below. The allocation % and $ is displayed to the right based on your chosen risk level. These securities are not regularly updated but are a good basis to start from. Do some research and find the best match for you!</li>
 
-                            <li>On the “Analysis” tab, note an automated recommended budget based on your income. These spending recommendations are helpful as a frame of reference, not an exact figure for what works for your household. In a similar manner, the automated saver tool recommends how much your household can save annually by cutting down on key expenses. Also, note the recommend savings breakdown for future investing.</li>
+                            <li>Notice your asset type breakdown in the pie chart. How does it compare to the recommended asset allocation based on your risk tolerance? How does your portfolio's expected return compared to the projected return target for your circumstances?</li>
 
                             <li>The key to driving the most value out of this tool and all our tools is establishing a foundational understanding of your financial situation. The next step is to share this information with a trusted financial advisor to help you make the right choices to improve your financial health.</li>
 
@@ -45,7 +45,7 @@
                     </p>
                   </div>
 
-                <img src="../../images/advanced-budget-laptop.png" alt="Basic Budgeting Tool">
+                <img src="../../images/advanced-investment-laptop.png" alt="Basic Budgeting Tool">
                 <a href="" class="download-button">Download</a>
             </section>
 
