--- a/tools.html
+++ b/tools.html
@@ -85,12 +85,12 @@
                 <div class="tools">
                     <div class="tools-content">
                         <div>
-                            <h3><a href="">Advanced Investment Mangagement Tool</a></h3>
+                            <h3><a href="individual-tools/advanced-tools/advanced-investment-tool.html">Advanced Investment Mangagement Tool</a></h3>
                             <p></p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="images/advanced-investment-laptop.png" alt="Advanced Investment Management Tool">
                     </div>
-                    <a href="individual-tools/advanced-tools/advanced-budget-tool.html" class="download-button">Download</a>
+                    <a href="individual-tools/advanced-tools/advanced-investment-tool.html" class="download-button">Download</a>
                 </div>
             </section>
 
