New updates to site

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
         </header>
 
         <main>
+
+            <img src="images/coin-1.jpeg" alt="Gold Coin" class="coin one">
+            <img src="images/coin-2.jpeg" alt="Gold Coin" class="coin two">
+            <img src="images/coin-3.jpeg" alt="Gold Coin" class="coin three">
+            <img src="images/coin-4.jpeg" alt="Gold Coin" class="coin four">
+            <img src="images/coin-5.jpeg" alt="Gold Coin" class="coin five">
             <div class="hero">
                 <div class="hero-text">
                     <h1>MoneyMatters.</h1>
@@ -135,7 +141,6 @@
             <section class="section4" id="join-us">
                 <h2>Get Connected</h2>
                 <h3>Enter Your Email</h3>
-                <p>Please submit the google form to receive other valuable insights.</p>
                 <div class="connection-container">
                     <div>
                         <a href="">
