--- a/tools.html
+++ b/tools.html
@@ -57,13 +57,24 @@
                     <a href="individual-tools/basic-tools/basic-retirement-tool.html" class="download-button">Download</a>
                 </div>
 
-                <div class="tools" id="last-listed-tool">
+                <div class="tools">
                     <div class="tools-content">
                         <div>
                             <h3><a href="individual-tools/basic-tools/basic-investment-tool .html">Investment Management Tool</a></h3>
                             <p>The “secret” to building wealth is save often and invest responsibly. Analyze how your investment strategies compares to your long term goals.</p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="images/basic-investment-laptop.png" alt="Basic Investment Management Tool">
+                    </div>
+                    <a href="individual-tools/basic-tools/basic-investment-tool .html" class="download-button">Download</a>
+                </div>
+
+                <div class="tools" id="last-listed-tool">
+                    <div class="tools-content">
+                        <div>
+                            <h3><a href="individual-tools/basic-tools/net-worth-calculator.html">Net Worth Calculator Tool</a></h3>
+                            <p>The “secret” to building wealth is save often and invest responsibly. Analyze how your investment strategies compares to your long term goals.</p> <!--<a href="">Explanation Video</a></p>-->
+                        </div>
+                        <img src="images/net-worth-calculator-laptop.png" alt="Net Worth Calculator Tool">
                     </div>
                     <a href="individual-tools/basic-tools/basic-investment-tool .html" class="download-button">Download</a>
                 </div>
@@ -86,7 +97,7 @@
                     <div class="tools-content">
                         <div>
                             <h3><a href="individual-tools/advanced-tools/advanced-investment-tool.html">Advanced Investment Mangagement Tool</a></h3>
-                            <p></p> <!--<a href="">Explanation Video</a></p>-->
+                            <p>The “secret” to building wealth is save often and invest responsibly. Analyze how your investment strategies compares to your long term goals.</p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="images/advanced-investment-laptop.png" alt="Advanced Investment Management Tool">
                     </div>
@@ -96,6 +107,7 @@
 
             <section class="section4" id="join-us">
                 <h2>Get Connected</h2>
+                <h3>Enter Your Email</h3>
                 <div class="connection-container">
                     <div>
                         <a href="">
