--- a/aboutus.html
+++ b/aboutus.html
@@ -76,6 +76,7 @@
 
             <section class="section3" id="join-us">
                 <h2>Get Connected</h2>
+                <h3>Enter Your Email</h3>
                 <div class="connection-container">
                     <div>
                         <a href="">
