--- a/index-test1.html
+++ b/index-test1.html
@@ -129,6 +129,7 @@
 
             <section class="section4" id="join-us">
                 <h2>Get Connected</h2>
+                <h3>Enter Your Email</h3>
                 <div class="connection-container">
                     <div>
                         <a href="">
