Many updates made

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <a href="individual-tools/basic-tools/basic-investment-tool .html">
                         <img src="images/investment-img.png" alt="Investing">
                         <h3>Investment Management Tool</h3>
-                        <p>Do your investment strategies match your goals?</p>
+                        <p>Does your investment strategy match your goals?</p>
                         </a>
                     </div>
                 </div>
