--- a/individual-tools/advanced-tools/advanced-investment-tool.html
+++ b/individual-tools/advanced-tools/advanced-investment-tool.html
@@ -27,6 +27,11 @@
                 <h1>Advanced Investment Management Tool.</h1>
                 <p class="first-p">The basic budgeting tool is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.</p>
                 
+                <div class="how-to-container">
+                    <p class="how-to-text">Quick Start</p>
+                    <button class="dropdown-arrow" id="toggleDropdown">▼</button>
+                  </div>
+                  
                 <div class="dropdown-details" id="dropdownContent">
                     <p>
                         The Advanced Investment Management Tool helps to categorize, project, and optimize your investments and curate an investment strategy that works for your goals.
