--- a/individual-tools/basic-tools/basic-investment-tool .html
+++ b/individual-tools/basic-tools/basic-investment-tool .html
@@ -28,7 +28,7 @@
                 <p class="first-p"></p>
                 
                 <div class="how-to-container">
-                    <p class="how-to-text">How to use</p>
+                    <p class="how-to-text">Quick Start</p>
                     <button class="dropdown-arrow" id="toggleDropdown">▼</button>
                   </div>
                   
