--- a/individual-tools/basic-tools/basic-retirement-tool.html
+++ b/individual-tools/basic-tools/basic-retirement-tool.html
@@ -26,10 +26,10 @@
             <section class="section1">
                 <h1>Basic Retirement Tool.</h1>
                 <p class="first-p"></p>
-                <div class="instructions">
-                    <p>How To Use</p>
-                    <a href=""></a>
-                </div>
+                <div class="how-to-container">
+                    <p class="how-to-text">Quick Start</p>
+                    <button class="dropdown-arrow" id="toggleDropdown">▼</button>
+                  </div>
                 <img src="" alt="Basic Retirement Tool">
                 <a href="" class="download-button">Download</a>
             </section>
