--- a/individual-tools/basic-tools/net-worth-calculator.html
+++ b/individual-tools/basic-tools/net-worth-calculator.html
@@ -28,7 +28,7 @@
                 <p class="first-p">The basic budgeting tool is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.</p>
                 
                 <div class="how-to-container">
-                    <p class="how-to-text">How to use</p>
+                    <p class="how-to-text">Quick Start</p>
                     <button class="dropdown-arrow" id="toggleDropdown">▼</button>
                   </div>
                   
