removed background from gold coins

--- a/aboutus.html
+++ b/aboutus.html
@@ -29,12 +29,12 @@
 
             <section class="section2">
 
-                <img src="images/coin-1.jpeg" alt="Gold Coin" class="coin one">
-                <img src="images/coin-2.jpeg" alt="Gold Coin" class="coin two">
-                <img src="images/coin-3.jpeg" alt="Gold Coin" class="coin three">
-                <img src="images/coin-4.jpeg" alt="Gold Coin" class="coin four">
-                <img src="images/coin-5.jpeg" alt="Gold Coin" class="coin five">
-                <img src="images/coin-6.jpeg" alt="Gold Coin" class="coin six">
+                <img src="images/coin-1.png" alt="Gold Coin" class="coin one">
+                <img src="images/coin-2.png" alt="Gold Coin" class="coin two">
+                <img src="images/coin-3.png" alt="Gold Coin" class="coin three">
+                <img src="images/coin-4.png" alt="Gold Coin" class="coin four">
+                <img src="images/coin-5.png" alt="Gold Coin" class="coin five">
+                <img src="images/coin-6.png" alt="Gold Coin" class="coin six">
 
                 <div class="plant-container">
                     <img src="images/plant-w-roots.PNG" alt="Plant" class="plant-image">
