--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 
         <main>
 
-            <img src="images/coin-1.jpeg" alt="Gold Coin" class="coin one">
-            <img src="images/coin-2.jpeg" alt="Gold Coin" class="coin two">
-            <img src="images/coin-3.jpeg" alt="Gold Coin" class="coin three">
-            <img src="images/coin-4.jpeg" alt="Gold Coin" class="coin four">
-            <img src="images/coin-5.jpeg" alt="Gold Coin" class="coin five">
+            <img src="images/coin-1.png" alt="Gold Coin" class="coin one">
+            <img src="images/coin-2.png" alt="Gold Coin" class="coin two">
+            <img src="images/coin-3.png" alt="Gold Coin" class="coin three">
+            <img src="images/coin-4.png" alt="Gold Coin" class="coin four">
+            <img src="images/coin-5.png" alt="Gold Coin" class="coin five">
             <div class="hero">
                 <div class="hero-text">
                     <h1>MoneyMatters.</h1>
