--- a/individual-tools/basic-tools/basic-investment-tool .html
+++ b/individual-tools/basic-tools/basic-investment-tool .html
@@ -34,10 +34,10 @@
                   
                   <div class="dropdown-details" id="dropdownContent">
                     <p>
-                        The Investment Management Tool helps to categorize, project, and optimize your investments and curate an investment strategy that works for your goals.
+                        The <span class="green">Investment Management Tool</span> helps to categorize, project, and optimize your investments and curate an investment strategy that works for your goals.
 
                         <ul>
-                            <li>Adjust the black cells with white font to record your information. Adjust the Risk Tolerance Cell (1,2,3). 1 being the least risky recommended for generally older individuals (55+) who rely on capital preservation and liquidity to live on. 2 is moderate risk for those looking to steadily grow while preserving capital through increased equity exposure. 3 is the greatest risk allocation of the options in this tool designed for young people with time to make gains and generally less capital at risk. (This is personal to you only and MoneyMatters does not have access until you share it with us)</li>
+                            <li>Adjust the <span class="black-white">black cells with white font</span> to record your information. Adjust the Risk Tolerance Cell (1,2,3). 1 being the least risky recommended for generally older individuals (55+) who rely on capital preservation and liquidity to live on. 2 is moderate risk for those looking to steadily grow while preserving capital through increased equity exposure. 3 is the greatest risk allocation of the options in this tool designed for young people with time to make gains and generally less capital at risk. (This is personal to you only and MoneyMatters does not have access until you share it with us)</li>
 
                             <li>Notice your asset type breakdown in the pie chart. How does it compare to the recommended asset allocation based on your risk tolerance? How does your portfolio's expected return compared to the projected return target for your circumstances?</li>
 
