added hamburger menu

--- a/aboutus.html
+++ b/aboutus.html
@@ -14,11 +14,18 @@
         <header>
             <div class="top-bar"></div>
             <a href="index.html"><p>MoneyMatters.</p></a>
+
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+
             <nav class="top">
                 <a href="index.html">Home</a>
                 <a href="tools.html">Tools</a>
                 <a href="aboutus.html">About Us</a>
-                <a href="" class="blog-link">Blogs</a>
+                <a href="blogs/blogs-home.html" class="blog-link">Blogs</a>
                 <a href="#join-us" class="block-link">Get Connected!</a>
             </nav>
         </header>
@@ -123,6 +130,9 @@
                 <p>&copy; 2025 <a href="https://ambitiousmarketingsolutions.com/">Ambitious Marketing Solutions</a></p>
             </div>
         </footer>
+
+        <script src="scripts/hamburger.js"></script>
+        
     </body>
 
 </html>
