--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="index.html">Home</a>
                         <a href="tools.html">Tools</a>
                         <a href="aboutus.html">About Us</a>
-                        <a href="" class="blog-link">Blogs</a>
+                        <a href="blogs/blogs-home.html" class="blog-link">Blogs</a>
                     <a href="#join-us" class="block-link">Get Connected!</a>
                 </nav>
         </header>
