fixed mobile nav

--- a/aboutus.html
+++ b/aboutus.html
@@ -21,7 +21,7 @@
                 <span></span>
               </div>
 
-            <nav class="top">
+            <nav class="top show" id="mobileMenu">
                 <a href="index.html">Home</a>
                 <a href="tools.html">Tools</a>
                 <a href="aboutus.html">About Us</a>
