--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
         <header>
             <div class="top-bar"></div>
                 <a href="index.html"><p>MoneyMatters.</p></a>
-                <nav class="top">
+
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                  </div>
+
+                <nav class="top show" id="mobileMenu">
                         <a href="index.html">Home</a>
                         <a href="tools.html">Tools</a>
                         <a href="aboutus.html">About Us</a>
@@ -194,7 +201,7 @@
             </div>
         </footer>
 
-        <script src="scripts/form-handling.js"></script>
+        <script src="scripts/hamburger.js"></script>
     </body>
 
 </html>
