--- a/aboutus.html
+++ b/aboutus.html
@@ -118,7 +118,7 @@
                 <a href="index.html">Home</a>
                 <a href="tools.html">Tools</a>
                 <a href="aboutus.html">About Us</a>
-                <a href="">Blogs</a>
+                <a href="blogs/blogs-home.html">Blogs</a>
             </nav>
             <div class="social-media">
                 <a href=""><img src="" alt=""></a>
