--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                     </div>
 
                     <div class="form-container">
+                        
                         <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
                             <div class="row">
                               <div class="col">
@@ -187,7 +188,7 @@
                 <a href="index.html">Home</a>
                 <a href="tools.html">Tools</a>
                 <a href="aboutus.html">About Us</a>
-                <a href="">Blogs</a>
+                <a href="blogs/blogs-home.html">Blogs</a>
             </nav>
             <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
             <div class="social-media">
