fixed and made majority of things consistent and then added header to the form

--- a/aboutus.html
+++ b/aboutus.html
@@ -94,6 +94,7 @@
                     </div>
 
                     <div class="form-container">
+                        <h3>Join the MoneyMatters Community!</h3>
                         <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
                             <div class="row">
                               <div class="col">
