--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
                     </div>
 
                     <div class="form-container">
-                        
+                        <div>
+                            <h3>Join the MoneyMatters Community!</h3>
+                        </div>
                         <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
                             <div class="row">
                               <div class="col">
