--- a/individual-tools/basic-tools/basic-investment-tool .html
+++ b/individual-tools/basic-tools/basic-investment-tool .html
@@ -66,6 +66,7 @@
                     </div>
 
                     <div class="form-container">
+                        <h3>Join the MoneyMatters Community!</h3>
                         <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
                             <div class="row">
                               <div class="col">
