--- a/blogs/blogs-home.html
+++ b/blogs/blogs-home.html
@@ -26,7 +26,7 @@
         </header>
 
 <section class="blog-hero">
-    <h1>Money Matters Blog</h1>
+    <h1>MoneyMatters Blog</h1>
     <p>Financial tips, tools, and real-world advice — for everyone.</p>
   </section>
   
