--- a/blogs/blogs-home.html
+++ b/blogs/blogs-home.html
@@ -15,12 +15,12 @@
     <body>
         <header>
             <div class="top-bar"></div>
-            <a href="index.html"><p>MoneyMatters.</p></a>
+            <a href="../index.html"><p>MoneyMatters.</p></a>
             <nav class="top">
-                <a href="index.html">Home</a>
-                <a href="tools.html">Tools</a>
-                <a href="aboutus.html">About Us</a>
-                <a href="" class="blog-link">Blogs</a>
+                <a href="../index.html">Home</a>
+                <a href="../tools.html">Tools</a>
+                <a href="../aboutus.html">About Us</a>
+                <a href="blogs-home.html" class="blog-link">Blogs</a>
                 <a href="#join-us" class="block-link">Get Connected!</a>
             </nav>
         </header>
