added socials and made some adjustments to text styling on tools page

--- a/aboutus.html
+++ b/aboutus.html
@@ -122,9 +122,12 @@
                 <a href="blogs/blogs-home.html">Blogs</a>
             </nav>
             <div class="social-media">
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
+                <h2>Follow Us!</h2>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="images/black-instagram-logo.png" alt=""></a>
+                    <a href=""><img src="" alt=""></a>
+                    <a href=""><img src="" alt=""></a>
+                </div>
             </div>
 
             <div class="credits">
