--- a/tools.html
+++ b/tools.html
@@ -45,7 +45,7 @@
                     <div class="tools-content">
                         <div>
                             <h3><a href="individual-tools/basic-tools/basic-budget-tool.html">Basic Budget Tool</a></h3>
-                            <p>The basic budgeting tool is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.</p>
+                            <p>The <span class="bold">basic budgeting tool</span> is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.</p>
                                 <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="images/basic-budget-laptop.png" alt="Basic Budget Excel Finance Tool">
@@ -57,7 +57,7 @@
                     <div class="tools-content">
                         <div>
                             <h3><a href="individual-tools/basic-tools/basic-retirement-tool.html">Retirement Planning Tool</a></h3>
-                            <p>The cost to retire “comfortably” is getting higher & higher. With this tool, monitor your progress towards financial stability.</p> <!--<a href="">Explanation Video</a></p>-->
+                            <p>The cost to retire “comfortably” is getting higher & higher. With this tool, monitor your progress towards <span class="italics">financial stability.</span></p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
                         <img src="" alt="">
                     </div>
@@ -159,9 +159,12 @@
                 <a href="blogs/blogs-home.html">Blogs</a>
             </nav>
             <div class="social-media">
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
+                <h2>Follow Us!</h2>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr"><img src="images/black-instagram-logo.png" alt=""></a>
+                    <a href=""><img src="" alt=""></a>
+                    <a href=""><img src="" alt=""></a>
+                </div>
             </div>
 
             <div class="credits">
